# timezones-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: image_release.yml  main.yaml  release.yml
tests/: conftest.py  fixtures.py  test_utils.py
timezones_cli/: main.py
timezones_cli/commands/: __init__.py  add.py  get.py  remove.py  search.py  select.py  show.py  utc.py
timezones_cli/utils/: __init__.py  abbreviations.py  validators.py  variables.py
